update display of books

--- a/index.html
+++ b/index.html
@@ -231,20 +231,23 @@ layout: default
     <div class="section-content">
         <h1 class="small-header">Books</h1>
         <div class="border"></div>
+        <h3>Corporate Books for Professionals</h3>
         <div class="section-books">
             <div class="book">
                 <div class="case-study-image" style="background-image: url('/assets/images/prospecting.jpg')"></div>
                 <div class="item-heading large-heading">Fearless Prospecting</div>
                 <div class="item-supheading">Getting out of your way and into the game</div>
                 <div class="item-subheading">
-                    This workbook provides the opportunity to refine
-                    and development your psychological performance
-                    skills. Each chapter guides you in applying the
-                    information directly to your practices and
-                    performances. The exercises and activities in this
-                    book have been developed over many years of
-                    helping musicians perform their best when it
-                    counts.
+                    TODO
+                </div>
+                <div class="book-price item-supheading">$25 - Due out 07/2015</div>
+            </div>
+            <div class="book">
+                <div class="case-study-image" style="background-image: url('/assets/images/prospecting.jpg')"></div>
+                <div class="item-heading large-heading">Fearless Prospecting</div>
+                <div class="item-supheading">High Performance Journal for Sales Professionals</div>
+                <div class="item-subheading">
+                    As a sales professional in a high-pressure performance environment, you may experience many competing demands, negative outcomes, mental distractions and emotional challenges that test your ability to stay positive, focused and fighting, day in and day out. This journal will assist you in maximizing your personal potential, connecting to what is valued in your life and growing your business.
                 </div>
                 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                     <input type="hidden" name="cmd" value="_s-xclick">
@@ -252,70 +255,17 @@ layout: default
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
-                <div class="book-price item-supheading">$25</div>
-            </div>
-            <div class="book">
-                <div class="case-study-image" style="background-image: url('/assets/images/excellence.jpg')"></div>
-                <div class="item-heading large-heading">Imbalanced Excellence</div>
-                <div class="item-supheading">Leading and managing your pursuit of excellence in an imbalanced world</div>
-                <div class="item-subheading">
-                    This workbook provides the opportunity to refine
-                    and development your psychological performance
-                    skills. Each chapter guides you in applying the
-                    information directly to your practices and
-                    performances. The exercises and activities in this
-                    book have been developed over many years of
-                    helping musicians perform their best when it
-                    counts.
-                </div>
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                    <input type="hidden" name="cmd" value="_s-xclick">
-                    <input type="hidden" name="hosted_button_id" value="JB3VE3ES6LVNY">
-                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                </form>
-                <div class="book-price item-supheading">$25</div>
-            </div>
-            <div class="book">
-                <div class="case-study-image" style="background-image: url('/assets/images/workbook.png')"></div>
-                <div class="item-heading large-heading">High Performance Workbook</div>
-                <div class="item-supheading">Playing your best when it counts</div>
-                <div class="item-subheading">
-                    This workbook provides the opportunity to refine
-                    and development your psychological performance
-                    skills. Each chapter guides you in applying the
-                    information directly to your practices and
-                    performances. The exercises and activities in this
-                    book have been developed over many years of
-                    helping musicians perform their best when it
-                    counts.
-                </div>
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                    <input type="hidden" name="cmd" value="_s-xclick">
-                    <input type="hidden" name="hosted_button_id" value="ZPTL3V2324VMW">
-                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                </form>
-                <div class="book-price item-supheading">$25</div>
+                <div class="book-price item-supheading">$25 (120 pages)</div>
             </div>
         </div>
-        <h3>Books for Athletes and Musicians</h3>
+        <h3>Books for Musicians</h3>
         <div class="section-books quarter">
             <div class="book">
-                <div class="case-study-image" style="background-image: url('/assets/images/where-you-want.jpg')"></div>
+                <div class="case-study-image" style="background-image: url('/assets/images/journal.png')"></div>
                 <div class="item-heading large-heading">
-                    Getting Where You Want to Go
+                    Playing Your Best When It Counts
                 </div>
-                <div class="item-subheading">
-                    Are you ready to take yourself to the next level? If so, this book will help you create an overriding vision of where you want to go and how you want to get there.
-                </div>
-                <div class="book-price item-supheading">$25</div>
-            </div>
-            <div class="book">
-                <div class="case-study-image" style="background-image: url('/assets/images/musicians.jpg')"></div>
-                <div class="item-heading large-heading">
-                    Mental Skills for Musicians and Performing Artists
-                </div>
+                <div class="item-supheading">Mental Skills for Musicians</div>
                 <div class="item-subheading">
                     How do you train mental performance skills in
                     practice? This book was created with this question
@@ -328,29 +278,46 @@ layout: default
                     about and applying the information directly to
                     your practices and performances.
                 </div>
+                <div class="book-price item-supheading">$25 (160 pages)</div>
+            </div>
+            <div class="book">
+                <div class="case-study-image" style="background-image: url('/assets/images/musicians.jpg')"></div>
+                <div class="item-heading large-heading">
+                    Playing Your Best
+                </div>
+                <div class="item-supheading">Mental Skills Workbook</div>
+                <div class="item-subheading">
+                    This workbook provides the opportunity to refine
+                    and development your psychological performance
+                    skills. Each chapter guides you in applying the
+                    information directly to your practices and
+                    performances. The exercises and activities in this
+                    book have been developed over many years of
+                    helping musicians perform their best when it
+                    counts.
+                </div>
                 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                     <input type="hidden" name="cmd" value="_s-xclick">
                     <input type="hidden" name="hosted_button_id" value="RF6AHRB7TLTG4">
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
-                <div class="book-price item-supheading">$25</div>
+                <div class="book-price item-supheading">$25 (98 pages)</div>
             </div>
             <div class="book">
                 <div class="case-study-image" style="background-image: url('/assets/images/journal.png')"></div>
                 <div class="item-heading large-heading">
-                    High Performance Journal
+                    Playing Your Best
                 </div>
+                <div class="item-supheading">High-Performance Journal for Musicians</div>
                 <div class="item-subheading">
-                    For years, successful musicians have used this
-                    journal with positive effects on their personal
-                    development and performance outcomes. This is a
-                    tool for you to train yourself to be
-                    strength-focused and solution oriented. It not
-                    only allows you to monitor improvement of your
-                    psychological skills, but it also enables you to
-                    record solutions and to reflect upon the positive
-                    aspects of both your practices and performances.
+                    For years, successful musicians have used this journal with positive
+                    effects on their personal development and performance outcomes. This
+                    is a tool for you to train yourself to be strength-focused and
+                    solution oriented. It not only allows you to monitor improvement of
+                    your psychological skills, but it also enables you to record solutions
+                    and to reflect upon the positive aspects of both your practices and
+                    performances.
                 </div>
                 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                     <input type="hidden" name="cmd" value="_s-xclick">
@@ -358,12 +325,15 @@ layout: default
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
-                <div class="book-price item-supheading">$20</div>
+                <div class="book-price item-supheading">$25 (150 pages)</div>
             </div>
+        </div>
+        <h3>Books for Golfers</h3>
+        <div class="section-books third">
             <div class="book">
                 <div class="case-study-image" style="background-image: url('/assets/images/golf.png')"></div>
                 <div class="item-heading large-heading">
-                    Mental Skills For Tournament Golfers
+                    Mental Skills for Tournament Golfers
                 </div>
                 <div class="item-subheading">
                     Are you ready to take your game to the next level?
@@ -374,13 +344,13 @@ layout: default
                     game, this book will help you become more mentally
                     stronger.
                 </div>
-                <div class="book-price item-supheading">$25</div>
                 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                     <input type="hidden" name="cmd" value="_s-xclick">
                     <input type="hidden" name="hosted_button_id" value="UX8JR8BZUQ9RA">
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
+                <div class="book-price item-supheading">$25 (180 pages)</div>
             </div>
         </div>
     </div>
