--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ layout: default
             </div>
             <div class="blog-entry">
                 <div class="item-heading large-heading faux-underline-large">3 Affirmations For Keeping Your Head In the Game</div>
-                <div class="item-subheading item-description">Now is the best time to reflect on this past year and evaluate what you have learned. Here are three steps to help you clarify the lessons you learned this year while laying the groundwork for advancing your 2015 goals. Carve out 40 minutes in your schedule where you will eliminate distractions. Find a quiet place with a notepad, pen and your 2014 calendar. This may be the best 40-minutes you spend this week! Phone off? Your favorite beverage in place? It’s time to begin.
+                <div class="item-subheading item-description">Now is the best time to reflect on this past year and evaluate what you have learned. Here are three steps to help you clarify the lessons you learned this year while laying the groundwork for advancing your 2015 goals. Carve out 4g0 minutes in your schedule where you will eliminate distractions. Find a quiet place with a notepad, pen and your 2014 calendar. This may be the best 40-minutes you spend this week! Phone off? Your favorite beverage in place? It’s time to begin.
                 </div>
             </div>
             <div class="blog-entry">
@@ -232,129 +232,86 @@ layout: default
         <h1 class="small-header">Books</h1>
         <div class="border"></div>
         <h3>Corporate Books for Professionals</h3>
-        <div class="section-books">
+        <div class="section-books half">
+            {% for book in site.books do %}
+            {% if book.type == 'corporate' %}
             <div class="book">
-                <div class="case-study-image" style="background-image: url('/assets/images/prospecting.jpg')"></div>
-                <div class="item-heading large-heading">Fearless Prospecting</div>
-                <div class="item-supheading">Getting out of your way and into the game</div>
-                <div class="item-subheading">
-                    TODO
-                </div>
-                <div class="book-price item-supheading">$25 - Due out 07/2015</div>
+                <div class="case-study-image" style="background-image: url('{{ book.image }}')"></div>
+                <div class="item-heading large-heading">{{ book.title }}</div>
+                <div class="item-supheading">{{ book.subtitle }}</div>
+                <div class="item-subheading">{{ book.content | markdownify }}</div>
             </div>
-            <div class="book">
-                <div class="case-study-image" style="background-image: url('/assets/images/prospecting.jpg')"></div>
-                <div class="item-heading large-heading">Fearless Prospecting</div>
-                <div class="item-supheading">High Performance Journal for Sales Professionals</div>
-                <div class="item-subheading">
-                    As a sales professional in a high-pressure performance environment, you may experience many competing demands, negative outcomes, mental distractions and emotional challenges that test your ability to stay positive, focused and fighting, day in and day out. This journal will assist you in maximizing your personal potential, connecting to what is valued in your life and growing your business.
-                </div>
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                    <input type="hidden" name="cmd" value="_s-xclick">
-                    <input type="hidden" name="hosted_button_id" value="E5DU93TJFR6JL">
-                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                </form>
-                <div class="book-price item-supheading">$25 (120 pages)</div>
-            </div>
+            {% endif %}
+            {% endfor %}
         </div>
         <h3>Books for Musicians</h3>
-        <div class="section-books quarter">
+        <div class="section-books third">
+            {% for book in site.books do %}
+            {% if book.type == 'music' %}
             <div class="book">
-                <div class="case-study-image" style="background-image: url('/assets/images/journal.png')"></div>
-                <div class="item-heading large-heading">
-                    Playing Your Best When It Counts
-                </div>
-                <div class="item-supheading">Mental Skills for Musicians</div>
-                <div class="item-subheading">
-                    How do you train mental performance skills in
-                    practice? This book was created with this question
-                    in mind and is designed to provide a solid
-                    foundation for developing and executing the mental
-                    skills necessary for playing your best when it
-                    counts. You will find the material in each chapter
-                    to be very applicable to your performance
-                    reality. Each chapter leads you into thinking
-                    about and applying the information directly to
-                    your practices and performances.
-                </div>
-                <div class="book-price item-supheading">$25 (160 pages)</div>
+                <div class="case-study-image" style="background-image: url('{{ book.image }}')"></div>
+                <div class="item-heading large-heading">{{ book.title }}</div>
+                <div class="item-supheading">{{ book.subtitle }}</div>
+                <div class="item-subheading">{{ book.content | markdownify }}</div>
             </div>
-            <div class="book">
-                <div class="case-study-image" style="background-image: url('/assets/images/musicians.jpg')"></div>
-                <div class="item-heading large-heading">
-                    Playing Your Best
-                </div>
-                <div class="item-supheading">Mental Skills Workbook</div>
-                <div class="item-subheading">
-                    This workbook provides the opportunity to refine
-                    and development your psychological performance
-                    skills. Each chapter guides you in applying the
-                    information directly to your practices and
-                    performances. The exercises and activities in this
-                    book have been developed over many years of
-                    helping musicians perform their best when it
-                    counts.
-                </div>
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                    <input type="hidden" name="cmd" value="_s-xclick">
-                    <input type="hidden" name="hosted_button_id" value="RF6AHRB7TLTG4">
-                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                </form>
-                <div class="book-price item-supheading">$25 (98 pages)</div>
-            </div>
-            <div class="book">
-                <div class="case-study-image" style="background-image: url('/assets/images/journal.png')"></div>
-                <div class="item-heading large-heading">
-                    Playing Your Best
-                </div>
-                <div class="item-supheading">High-Performance Journal for Musicians</div>
-                <div class="item-subheading">
-                    For years, successful musicians have used this journal with positive
-                    effects on their personal development and performance outcomes. This
-                    is a tool for you to train yourself to be strength-focused and
-                    solution oriented. It not only allows you to monitor improvement of
-                    your psychological skills, but it also enables you to record solutions
-                    and to reflect upon the positive aspects of both your practices and
-                    performances.
-                </div>
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                    <input type="hidden" name="cmd" value="_s-xclick">
-                    <input type="hidden" name="hosted_button_id" value="GFWSG4JSW2F6E">
-                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                </form>
-                <div class="book-price item-supheading">$25 (150 pages)</div>
-            </div>
+            {% endif %}
+            {% endfor %}
         </div>
         <h3>Books for Golfers</h3>
-        <div class="section-books third">
+        <div class="section-books full">
+            {% for book in site.books do %}
+            {% if book.type == 'golf' %}
             <div class="book">
-                <div class="case-study-image" style="background-image: url('/assets/images/golf.png')"></div>
-                <div class="item-heading large-heading">
-                    Mental Skills for Tournament Golfers
-                </div>
-                <div class="item-subheading">
-                    Are you ready to take your game to the next level?
-                    If so, this book will help you play competitive
-                    golf with more confidence in your game and trust
-                    in your swing. Whether you are a professional
-                    golfer or simply someone passionate about your
-                    game, this book will help you become more mentally
-                    stronger.
-                </div>
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                    <input type="hidden" name="cmd" value="_s-xclick">
-                    <input type="hidden" name="hosted_button_id" value="UX8JR8BZUQ9RA">
-                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                </form>
-                <div class="book-price item-supheading">$25 (180 pages)</div>
+                <div class="case-study-image" style="background-image: url('{{ book.image }}')"></div>
+                <div class="item-heading large-heading">{{ book.title }}</div>
+                <div class="item-subheading">{{ book.content | markdownify }}</div>
             </div>
+            {% endif %}
+            {% endfor %}
         </div>
     </div>
 </section>
+
+<section class="seminars" id="seminars">
+    <div class="section-content">
+        <h1 class="small-header">Seminars</h1>
+        <div class="border"></div>
+        <h3>Corporate Seminars</h3>
+        <div class="section-books quarter">
+            {% for seminar in site.seminars do %}
+            {% if seminar.type == 'corporate' %}
+            <div class="book">
+                <div class="item-heading large-heading">{{ seminar.title }}</div>
+                <div class="item-subheading">{{ seminar.content | markdownify }}</div>
+            </div>
+            {% endif %}
+            {% endfor %}
+        </div>
+        <h3>Music Seminars</h3>
+        <div class="section-books quarter">
+            {% for seminar in site.seminars do %}
+            {% if seminar.type == 'music' %}
+            <div class="book">
+                <div class="item-heading large-heading">{{ seminar.title }}</div>
+                <div class="item-subheading">{{ seminar.content | markdownify }}</div>
+            </div>
+            {% endif %}
+            {% endfor %}
+        </div>
+        <h3>Sports Seminars</h3>
+        <div class="section-books quarter">
+            {% for seminar in site.seminars do %}
+            {% if seminar.type == 'sports' %}
+            <div class="book">
+                <div class="item-heading large-heading">{{ seminar.title }}</div>
+                <div class="item-subheading">{{ seminar.content | markdownify }}</div>
+            </div>
+            {% endif %}
+            {% endfor %}
+        </div>
+    </div>
+</section>
+
 
 <div class="separate"></div>
 <section class="large-footer" id="large-footer">
