--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ layout: default
             {% endfor %}
         </div>
         <h3>Music Seminars</h3>
-        <div class="section-books quarter">
+        <div class="section-books third">
             {% for seminar in site.seminars do %}
             {% if seminar.type == 'music' %}
             <div class="book">
