--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@ layout: default
         <h1>About</h1>
         <div class="border"></div>
         <p class="large">
-            I am a performance psychology consultant working with business professionals helping both individuals and teams perform at optimal levels more consistently and when it counts the most.
+            I am a performance psychology consultant working with
+            business professionals helping both individuals and teams
+            perform at optimal levels more consistently and when it
+            counts the most.
         </p>
     </div>
 </section>
@@ -237,7 +240,7 @@ layout: default
             {% if book.type == 'corporate' %}
             <div class="book">
                 <div class="case-study-image" style="background-image: url('{{ book.image }}')"></div>
-                <div class="item-heading large-heading">{{ book.title }}</div>
+                <a href="{{ book.url }}" class="item-heading large-heading">{{ book.title }}</a>
                 <div class="item-supheading">{{ book.subtitle }}</div>
                 <div class="item-subheading">{{ book.content | markdownify }}</div>
             </div>
@@ -250,7 +253,7 @@ layout: default
             {% if book.type == 'music' %}
             <div class="book">
                 <div class="case-study-image" style="background-image: url('{{ book.image }}')"></div>
-                <div class="item-heading large-heading">{{ book.title }}</div>
+                <a href="{{ book.url }}" class="item-heading large-heading">{{ book.title }}</a>
                 <div class="item-supheading">{{ book.subtitle }}</div>
                 <div class="item-subheading">{{ book.content | markdownify }}</div>
             </div>
@@ -263,7 +266,7 @@ layout: default
             {% if book.type == 'golf' %}
             <div class="book">
                 <div class="case-study-image" style="background-image: url('{{ book.image }}')"></div>
-                <div class="item-heading large-heading">{{ book.title }}</div>
+                <a href="{{ book.url }}" class="item-heading large-heading">{{ book.title }}</a>
                 <div class="item-subheading">{{ book.content | markdownify }}</div>
             </div>
             {% endif %}
@@ -306,25 +309,5 @@ layout: default
             {% endif %}
             {% endfor %}
         </div>
-    </div>
-</section>
-
-
-<div class="separate"></div>
-<section class="large-footer" id="large-footer">
-    <div class="section-content">
-        <h1>Dr. Bill Moore</h1>
-        <div class="personal-images">
-            <div class="image" style="background-image: url('/assets/images/bill-ian.jpg')"></div>
-            <div class="portrait"></div>
-            <div class="image" style="background-image: url('/assets/images/bill-nicki.jpg')"></div>
-        </div>
-        <p>
-            Influential Author, International Speaker and Executive Coach, Dr. Moore has trained world class athletes, performing artists, business professionals, and organizations in the United States and Europe. He holds a Doctorate degree in Sport Psychology from the University of Virgina. His unique blend of experiences as a professional tennis player, intercollegiate coach and performatnce psychology specialist has help to develop his reputation as a leading authority in his field.
-        </p>
-        <p>Currently living in Oklahoma with my wife Nicki and son Ian.</p>
-        <div class="border"></div>
-        <h1 class="small-width">Be more positive, focused and fighting</h1>
-        <a class="button" href="mailto:bemore@drbillmoore.com?subject=Inquiry about performance coaching">Inquire about performance coaching</a>
     </div>
 </section>
