fix book images

--- a/index.html
+++ b/index.html
@@ -239,7 +239,11 @@ layout: default
             {% for book in site.books do %}
             {% if book.type == 'corporate' %}
             <div class="book">
-                <div class="case-study-image" style="background-image: url('{{ book.image }}')"></div>
+                <div class="books-container">
+                    <div class="three-d-book">
+                        <div class="book-page-image" style="background-image: url('{{ book.image }}')"></div>
+                    </div>
+                </div>
                 <a href="{{ book.url }}" class="item-heading large-heading">{{ book.title }}</a>
                 <div class="item-supheading">{{ book.subtitle }}</div>
                 <div class="item-subheading">{{ book.content | markdownify }}</div>
@@ -252,7 +256,12 @@ layout: default
             {% for book in site.books do %}
             {% if book.type == 'music' %}
             <div class="book">
-                <div class="case-study-image" style="background-image: url('{{ book.image }}')"></div>
+                <div class="books-container">
+                    <div class="three-d-book">
+                        <div class="book-page-image" style="background-image: url('{{ book.image }}')"></div>
+                    </div>
+                </div>
+
                 <a href="{{ book.url }}" class="item-heading large-heading">{{ book.title }}</a>
                 <div class="item-supheading">{{ book.subtitle }}</div>
                 <div class="item-subheading">{{ book.content | markdownify }}</div>
@@ -265,7 +274,11 @@ layout: default
             {% for book in site.books do %}
             {% if book.type == 'golf' %}
             <div class="book">
-                <div class="case-study-image" style="background-image: url('{{ book.image }}')"></div>
+                <div class="books-container">
+                    <div class="three-d-book">
+                        <div class="book-page-image" style="background-image: url('{{ book.image }}')"></div>
+                    </div>
+                </div>
                 <a href="{{ book.url }}" class="item-heading large-heading">{{ book.title }}</a>
                 <div class="item-subheading">{{ book.content | markdownify }}</div>
             </div>
