--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
         </p>
     </div>
 </section>
-<section class="purple-section" id="help-become">
+<section class="dark-color-section" id="help-become">
     <div class="section-content">
         <h3 class="small">I help you become more&#8230;</h3>
         <div class="more-section-group">
@@ -116,7 +116,7 @@ layout: default
     </div>
 </section>
 
-<section class="purple-section" id="speaking">
+<section class="light-color-section" id="speaking">
     <div class="section-content">
         <div class="section-do third-size">
             <div class="left">
@@ -204,7 +204,7 @@ layout: default
     </div>
 </section>
 
-<section class="blog" id="writing">
+<section class="blog light-color-section" id="writing">
     <div class="section-content">
         <h1 class="small-header">Writing</h1>
         <div class="border"></div>
@@ -225,8 +225,7 @@ layout: default
                 </div>
             </div>
         </div>
-        <a class="button" href="https://www.linkedin.com/in/drbillmoore">Subscribe</a>
-        <div class="small-note">About one email a month</div>
+        <a class="button" href="https://www.linkedin.com/in/drbillmoore">See More</a>
     </div>
 </section>
 
@@ -293,7 +292,7 @@ layout: default
     </div>
 </section>
 
-<section class="seminars" id="seminars">
+<section class="seminars light-color-section" id="seminars">
     <div class="section-content">
         <h1 class="small-header">Seminars</h1>
         <div class="border"></div>
