--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@ layout: default
     <h3>Helping You Succeed in Competitive Performance Environments</h3>
 </div>
 
-<div class="separate first"></div>
-<section class="about" id="about">
+<section class="about light-color-section" id="about">
     <div class="section-content">
-        <h1>About</h1>
-        <div class="border"></div>
         <p class="large">
             I am a performance psychology consultant working with
             business professionals helping both individuals and teams
@@ -21,8 +18,11 @@ layout: default
         </p>
     </div>
 </section>
-<section class="dark-color-section" id="help-become">
+
+<section class="about" id="about">
     <div class="section-content">
+        <h1>About</h1>
+        <div class="border"></div>
         <h3 class="small">I help you become more&#8230;</h3>
         <div class="more-section-group">
             <div class="more-section">
@@ -53,10 +53,8 @@ layout: default
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<section class="about">
-    <div class="section-content">
+        <br />
+        <div class="separate"></div>
         <h3>Touchstones</h3>
         <p>
             I believe maximizing your full potential can be achieved with passion and persistence. Every individual possesses the strengths enabling him or her to overcome obstacles and move beyond common performance into the realm of uncommon, passionate performance. The following are the standards you can expect from me.
@@ -221,11 +219,6 @@ layout: default
                         When ever you strive for success you engage in two games simultaneously - the inner game and the outer game. Winning outer game involves achieving external rewards - a promotion, salary increase or professional award.
                     </p>
                     <p>
-                        The winning inner game is getting your best out when it counts - minimizing your internal distractions or interferences. Keeping your head in the game and allowing the best you have to come out. Performing your best involves minimizing internal interference and expressing the best that is in you.
-                    </p>
-                    <p>
-                        Now is the best time to reflect on this past year and evaluate what you have learned. Here are three steps to help you clarify the lessons you learned this year while laying the groundwork for advancing your 2015 goals. Carve out 40 minutes in your schedule where you will eliminate distractions. Find a quiet place with a notepad, pen and your 2014 calendar. This may be the best 40-minutes you spend this week! Phone off? Your favorite beverage in place? It’s time to begin.
-                    </p>
                 </div>
             </div>
         </div>
