change title of book

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ layout: default
     <div class="section-content">
         <h1 class="small-header">Books</h1>
         <div class="border"></div>
-        <h3>Corporate Books for Professionals</h3>
+        <h3>Books for Professionals</h3>
         <div class="section-books half">
             {% for book in site.books do %}
             {% if book.type == 'corporate' %}
