add quotes to homepage

--- a/index.html
+++ b/index.html
@@ -291,6 +291,20 @@ layout: default
     <div class="section-content">
         <h1 class="small-header">Seminars</h1>
         <div class="border"></div>
+        <p>
+            I rate the Fearless Prospecting Seminar a 10 out of 10. I already liked to prospect and found it fun. Dr. Bill seminar along with his high performance journal helped me get a greater perspective on my self limiting factors. In the small group session I learned that I approached prospecting out of a fear of failure vs. an excitement for success. I realized just last week I need and can confidently prospect to families earning 400,000 or more. I use to prospect to survive, now I am prospecting to prosper. It has really helped me.
+            <div class="source">&mdash; <i>George E. Kavalauskas, Jr, CLU</i></div>
+        </p>
+        <p>
+            ​Hands-down, the best LFG development program we've have. Dr. Bill nails it every visit. I consistently get the best feedback from all FR’s in Columbus about his work. The journaling process has helped me become far more organized, focused, and happy. I would recommend this program to every General Agent in the country. Bill has helped me become stronger leader because of the time spent with him.
+            <br />
+        <div class="source">&mdash; <i>Paul Swift, Associate General Agent, Lifetime Financial Growth, LLC</i></div>
+        </p>
+        <p>
+            Doc Bills seminar was the best prospecting seminar I have attended. He uses very real and understandable coaching advice that you can apply immediately as opposed to months of homework. His compassion and understanding of the life insurance industry is also shown in the class and adds extra value to the class.
+            <div class="source">&mdash; <i>Eric Fischesser, CFP</i></div>
+        </p>
+        <br />
         <h3 class="faux-underline-large">Corporate Seminars</h3>
         <div class="section-books quarter">
             {% for seminar in site.seminars do %}
