update style of about section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
     <div class="section-content">
         <h1>About</h1>
         <div class="border"></div>
-        <h3 class="small">I help you become more&#8230;</h3>
+        <h3 class="small">I help you become more positive, focused and fighting</h3>
         <div class="more-section-group">
             <div class="more-section">
                 <div class="font-heading fa fa-4x fa-thumbs-up"></div>
@@ -45,6 +45,7 @@ layout: default
             </div>
             <div class="more-section">
                 <div class="font-heading fa fa-4x fa-fighter-jet"></div>
+
                 <div class="item-heading large-heading">Fighting</div>
                 <div class="border"></div>
                 <div class="item-subheading large-subheading">
@@ -81,7 +82,7 @@ layout: default
                     <div class="faux-underline-large">Accountability</div>
                 </div>
                 <div class="item-subheading large-subheading">
-                    I expect to be held accountable for the investment made by you or your company. I establish accountability structures with you to help generate movement toward your hopes, goals and dreams
+                    I expect to be held accountable for the investment made by you or your company. I establish accountability structures with you to help generate movement toward your hopes, goals and dreams.
                 </div>
             </div>
         </div>
