--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ layout: default
             <div class="left">
                 <div class="item-heading large-heading">High-Performance Seminars</div>
                 <div class="item-subheading item-description">
-                    High-performance seminars are designed to inspire participants and provide guidance in their continued growth. Participants discuss, learn and apply strategies for changing self-limiting beliefs, minimizing the mental and emotional interferences keeping them from performing at the upper range of their potential more consistently. Performance psychology principles are applied in creating a positive performance mindset.
+                    High-Performance seminars are designed to inspire participants and provide guidance in their continued growth. Participants discuss, learn and apply strategies for changing self-limiting beliefs, minimizing the mental and emotional interferences keeping them from performing at the upper range of their potential more consistently. Performance psychology principles are applied in creating a positive performance mindset.
                     <a class="button" href="/assets/pdf/getting-where-you-want-to-go.pdf">Download Workbooks</a>
                     <div class="small-note">
                         Click for free seminar workbooks and handouts
@@ -210,14 +210,14 @@ layout: default
         <div class="section-writing">
             <div class="blog-entry">
                 <div class="item-heading large-heading">
-                    <a href="https://www.linkedin.com/pulse/3-great-affirmations-keeping-your-head-game-dr-bill-moore">3 Great Affirmations For Keeping Your Head In The Game</a>
+                    <a href="https://www.linkedin.com/pulse/3-great-affirmations-keeping-your-head-game-dr-bill-moore">3 Affirmations For Keeping Your Head In The Game</a>
                 </div>
                 <div class="item-subheading item-description">
                     <p>
                         <i>“The inner game takes place within the mind of the player and is played against such obstacles as fear, self-doubt, lapses in focus, and limiting concepts or assumptions.”</i> - Timothy Gallway, The Inner Game of Tennis
                     </p>
                     <p>
-                        When ever you strive for success you engage in two games simultaneously - the inner game and the outer game. Winning outer game involves achieving external rewards - a promotion, salary increase or professional award.
+                        When ever you strive for success you engage in two games simultaneously - the inner game and the outer game. Winning the outer game involves achieving external rewards - a promotion, salary increase or professional award.
                     </p>
                     <p>
                 </div>
@@ -293,7 +293,7 @@ layout: default
         <h1 class="small-header">Seminars</h1>
         <div class="border"></div>
         <p>
-            I rate the Fearless Prospecting Seminar a 10 out of 10. I already liked to prospect and found it fun. Dr. Bill seminar along with his high performance journal helped me get a greater perspective on my self limiting factors. In the small group session I learned that I approached prospecting out of a fear of failure vs. an excitement for success. I realized just last week I need and can confidently prospect to families earning 400,000 or more. I use to prospect to survive, now I am prospecting to prosper. It has really helped me.
+            I rate the Fearless Prospecting Seminar a 10 out of 10. I already liked to prospect and found it fun. Dr. Bill's seminar along with his high performance journal helped me get a greater perspective on my self-limiting factors. In the small group session I learned that I approached prospecting out of a fear of failure vs. an excitement for success. I realized just last week that I need to and can confidently prospect to families earning $400,000 or more. I used to prospect to survive, now I am prospecting to prosper. It has really helped me.
             <div class="source">&mdash; <i>George E. Kavalauskas, Jr, CLU</i></div>
         </p>
         <p>
@@ -302,7 +302,7 @@ layout: default
         <div class="source">&mdash; <i>Paul Swift, Associate General Agent, Lifetime Financial Growth, LLC</i></div>
         </p>
         <p>
-            Doc Bills seminar was the best prospecting seminar I have attended. He uses very real and understandable coaching advice that you can apply immediately as opposed to months of homework. His compassion and understanding of the life insurance industry is also shown in the class and adds extra value to the class.
+            Doc Bill's seminar was the best prospecting seminar I have attended. He uses very real and understandable coaching advice that you can apply immediately, as opposed to months of homework. His compassion and understanding of the life insurance industry is also shown in the class and adds extra value to the class.
             <div class="source">&mdash; <i>Eric Fischesser, CFP</i></div>
         </p>
         <br />
