--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: default
                 <div class="item-heading large-heading">Focused</div>
                 <div class="border"></div>
                 <div class="item-subheading large-subheading">
-                    <b>On the things that matter most in your success. </b>
+                    <b>On the things that matter most for your success. </b>
                     For many, it is not talent or work ethic keeping them from maximizing their full potential. Rather it is their ability to focus. Success is a product of identifying and executing around correct priorities.
                 </div>
             </div>
