--- a/index.html
+++ b/index.html
@@ -210,6 +210,21 @@ layout: default
         <div class="section-writing">
             <div class="blog-entry">
                 <div class="item-heading large-heading">
+                    <a href="https://www.linkedin.com/pulse/4-choices-high-performers-make-other-dont-dr-bill-moore">4 Choices High Performers Make That Other Don't</a>
+                </div>
+                <div class="item-subheading item-description">
+                    <p>
+                        It is very possible that for you to perform at the upper range of your potential more often, you will need to make some changes - to make different choices. Below are four choices you can make to become a high performer.
+                    </p>
+                    <p>
+                        A high performers are typically understood as individuals who are achieving outcomes beyond or above most other people. What if we broadened the definition of a high performer to include are all those individuals who, consistently perform at the upper range of their current potential, regardless of their skill level or talent? This definition separates high performers from elite performers.
+                    </p>
+                    <p>
+                </div>
+            </div>
+            <br />
+            <div class="blog-entry">
+                <div class="item-heading large-heading">
                     <a href="https://www.linkedin.com/pulse/3-great-affirmations-keeping-your-head-game-dr-bill-moore">3 Affirmations For Keeping Your Head In The Game</a>
                 </div>
                 <div class="item-subheading item-description">
