--- a/index.html
+++ b/index.html
@@ -210,6 +210,30 @@ layout: default
         <div class="section-writing">
             <div class="blog-entry">
                 <div class="item-heading large-heading">
+                    <a href="https://www.linkedin.com/pulse/four-beliefs-great-performers-dr-bill-moore">4 Beliefs Of Great Performers</a>
+                </div>
+                <div class="item-subheading item-description">
+                    <p>
+                        What do great performers believe that separates them from others? How do they keep their confidence high and self-image intact through
+                        multiple mistakes, rejections and failures? When you think of great athletes, business professionals, or musicians, what beliefs keep them fighting the good fight, day in and day out?
+                    </p>
+                    <p>
+                        The following are four beliefs that provide the underpinnings of a positive performance mindset. They enable you to approach what you do with enthusiasm, persist through failures with confidence, and help you to evaluate your performances in ways that keeps your head in the game.What do great performers believe that separates them from others? How do they keep their confidence high and self-image intact through multiple mistakes, rejections and failures? When you think of great athletes, business professionals, or musicians, what beliefs keep them fighting the good fight, day in and day out?
+                    </p>
+                </div>
+            </div>
+            <div class="blog-entry">
+                <div class="item-heading large-heading">
+                    <a href="https://www.linkedin.com/pulse/four-beliefs-great-performers-dr-bill-moore">3 Self-limiting Beliefs of Salespeople</a>
+                </div>
+                <div class="item-subheading item-description">
+                    <p>
+                        Why is it that two individuals with identical sales capabilities, knowledge and talent reach two entirely different professional levels? What separates them? Why does one accomplish his goals and the other does not? Chances are it is not due to a better sales strategy, more product knowledge, or even more sales experience. Yet most sales training addresses either the strategic aspects of the selling process or the technical aspects of the products. How important is the mental and emotional aspect to your success? Success in any performance domain involves all three aspects - strategic, technical and mental/emotional. Yet, it is the mental/emotional aspect that is least understood and often has the greatest impact on achieving and sustaining your success.
+                    </p>
+                </div>
+            </div>
+            <div class="blog-entry">
+                <div class="item-heading large-heading">
                     <a href="https://www.linkedin.com/pulse/4-choices-high-performers-make-other-dont-dr-bill-moore">4 Choices High Performers Make That Other Don't</a>
                 </div>
                 <div class="item-subheading item-description">
